# learning-haskell-programming

./: README.md  wordGame.cabal
.stack-work/install/6c953ab2/doc/wordGame-0.1.0.0/: LICENSE
.stack-work/install/6c953ab2/flag-cache/: HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  QuickCheck-2.9.2-LvlomhGMxrFBkX1zwiWpQu  ansi-terminal-0.6.3.1-CdiTOvx5ZEQ2RerUYIP05k  async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  base-compat-0.9.3-m1TEyTenyr5nJN40TpHVj  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  hspec-2.4.4-Hslmpj3KhpX5qiq42ca2Yq  hspec-core-2.4.4-HfxBR0YrMu77yIMWFmbbw5  hspec-discover-2.4.4-99Suq6sFZ1T6o4isjc43TZ  hspec-expectations-0.8.2-DujBeQFEMmfJJRLad7XQgd  primitive-0.6.2.0-4578caNkWQ54Gt1mxLF2Yh  quickcheck-io-0.2.0-4pLO1WRxoBW9gt8EnME0zS  random-1.1-9tceXaeYIMZ4JrKq20Egog  setenv-0.1.1.3-7zMwpxt4EEAPEd1ZS7C4A  stm-2.4.4.1-JQn4hNPyYjP5m9AcbI88Ve  tf-random-0.5-CJZw1ZWS5MOJlR60HqKEZL
.stack-work/install/6c953ab2/pkgdb/: package.cache  wordGame-0.1.0.0-Ht2VxeBEw2A5H5gLSwfVZ.conf
app/: Main.hs
src/: Lib.hs
test/: Spec.hs
