name:                wordGame
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rishichawda/wordGame#readme
license:             BSD3
license-file:        LICENSE
author:              Rishi Chawda
maintainer:          chawda.rishii@gmail.com
copyright:           rishichawda
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable wordGame
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , wordGame
  default-language:    Haskell2010

test-suite wordGame-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , wordGame
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rishichawda/wordGame
